--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,3 +21,7 @@
     text-wrap: balance;
   }
 }
+
+.social-media {
+  @apply cursor-pointer hover:text-title transition ease-in-out duration-150 hover:scale-110 hover:-translate-y-1;
+}
